swagger books + cat
